--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=47eb9f80c2d527ee21cb2658044bc9fc
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://herrera:corleone@127.0.0.1:3306/Soshop?serverVersion=mariadb-10.4.11
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
